# db-model

./: .gitattributes  .gitmodules  LICENSE  README.md  db-model.cabal  db-model.sublime-workspace  stack.yaml
benchmark/: Spec.hs  benchmark.db
benchmark/Test/: Run.hs
src/DB/: Model.hs
src/DB/Model/: Interface.hs  Internal.hs  MultiTable.hs  SimpleTable.hs  Table.hs  _Load.hs  _Save.hs
src/DB/Model/Internal/: Class.hs  Exception.hs  Load.hs  MultiTable.hs  New.hs  Prelude.hs  Remove.hs  SimpleTable.hs  TypeCast.hs  Update.hs  Value.hs  Where.hs  _New.hs  _Update.hs
src/DB/MonadModel/: MultiTable.hs  SimpleTable.hs
test/: Spec.hs  test.db
test/Test/: MultiTable.hs  Run.hs  SimpleTable.hs  _Load.hs  _Save.hs
test/Test/MultiTable/: Load.hs  New.hs  Remove.hs  Update.hs
