name:                db-model
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/ylilarry/db-model#readme
license:             BSD3
license-file:        LICENSE
author:              Yu Li
maintainer:          ylilarry@gmail.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     DB.Model
                     , DB.Model.Internal
  build-depends:       base >= 4.7 && < 5
                     , fcache >= 1.0
                     , mtl
                     , hashable
                     , HDBC
  default-language:    Haskell2010

test-suite db-model-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Test.Save
  build-depends:       base
                     , db-model
                     , hspec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ylilarry/db-model
